--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,13 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
+    {% feed_meta %}
+    {% seo %}
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   </head>
   <body>
-    {{ content}}
+    {% include navigation.html %}
+    {{ content }}
   </body>
 </html>
