--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,5 @@
 {% include header.html %}
   <body>
-    {% include navigation.html %}
     {{ content }}
   </body>
-</html>
+{% include footer.html %}
