--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,7 @@
 {% include header.html %}
   <body>
-    {{ content }}
+    <div class="container">
+      {{ content }}
+    </div>
   </body>
 {% include footer.html %}
