--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,9 +1,67 @@
-$backgroundColor: #ffffff;
-$bodyColor: #000000;
+$backgroundColor: #0d0c0c;
+$bodyColor: #e5e5e5;
 $bodyFont: "Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
+html {
+  margin-left: calc(100vw - 100%);
+  overflow-x: hidden;
+}
 body {
   background: $backgroundColor;
   color: $bodyColor;
   font-family: $bodyFont;
+}
+body a {
+  color: #a5a2a2;
+  text-decoration: none;
+}
+body a:hover {
+  color: #dd2020;
+  text-decoration: none;
+  transition: .5s;
+}
+
+/* NAV CSS */
+#full-nav {
+  position: absolute;
+  display: block;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, .9);
+  right: -100vw;
+}
+#full-nav-ul {
+  position: relative;
+  width: 50vw;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+}
+#full-nav-ul li {
+  font-size: 5rem;
+  padding: 10px;
+}
+#full-nav-ul li a {
+  text-decoration: none;
+  color: #e5e5e5;
+}
+#full-nav-ul li a:hover {
+  transform: scale(1.1);
+}
+#full-nav-ul li a:hover::after {
+  content: ' \00BB';
+}
+#full-nav-close, #full-nav-open {
+  position: absolute;
+  right: 0;
+  padding: 30px;
+  color: #e5e5e5;
+  cursor: pointer;
+}
+#full-nav-close i:hover, #full-nav-open i:hover {
+  color: #dd2020;
+  transform: scale(1.1);
+  transition: .5s;
+  backface-visibility: hidden;
 }
