--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,6 @@
 $backgroundColor: #0d0c0c;
 $bodyColor: #e5e5e5;
+$hover1: #dd2020;
 $bodyFont: "Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
 html {
@@ -16,7 +17,7 @@ body a {
   text-decoration: none;
 }
 body a:hover {
-  color: #dd2020;
+  color: $hover1;
   text-decoration: none;
   transition: .5s;
 }
@@ -46,6 +47,12 @@ body a:hover {
   text-decoration: none;
   color: #e5e5e5;
 }
+#full-nav-close i:hover, #full-nav-open i:hover, #full-nav-ul li a:hover {
+  color: $hover1;
+  transform: scale(1.1);
+  transition: .5s;
+  backface-visibility: hidden;
+}
 #full-nav-ul li a:hover::after {
   content: ' \00BB';
 }
@@ -55,10 +62,4 @@ body a:hover {
   padding: 30px;
   color: #e5e5e5;
   cursor: pointer;
-}
-#full-nav-close i:hover, #full-nav-open i:hover, #full-nav-ul li a:hover {
-  color: #dd2020;
-  transform: scale(1.1);
-  transition: .5s;
-  backface-visibility: hidden;
 }
