adding spartan google font

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,7 @@
 $backgroundColor: #0d0c0c;
 $bodyColor: #e5e5e5;
 $hover1: #dd2020;
-$bodyFont: "Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+$bodyFont: 'Spartan', sans-serif;
 
 html {
   margin-left: calc(100vw - 100%);
