footer first draft

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,28 @@
+<!-- Footer -->
+<footer id="site-footer" class="page-footer font-small">
+  <div class="row">
+    <div class="col-6 align-self-center">
+      <span>
+        This site was made by me. I used <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://forestry.io/" target="_blank">Forestry.io</a>
+      </span>
+    </div>
+    <div class="col-6">
+      <ul class="list-group list-group-horizontal float-right">
+        <li class="list-group-item">
+          <a href="#">Projects</a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">About Me</a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">Resume</a>
+        </li>
+        <li class="list-group-item">
+          <a href="#">Bin</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
+<!-- Footer -->
 </html>
