stick footer to bottom of page with flex positioning. Add content to header.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,8 @@
-<!-- Footer -->
-<footer id="site-footer" class="page-footer font-small">
+<footer class="site-footer">
   <div class="row">
     <div class="col-6 align-self-center">
       <span>
-        This site was made by me. I used <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://forestry.io/" target="_blank">Forestry.io</a>
+        This site was made by <a href="https://www.linkedin.com/in/marc-mestre-99147721/" target=_blank">me</a>. I used <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> and <a href="https://forestry.io/" target="_blank">Forestry.io</a>
       </span>
     </div>
     <div class="col-6">
@@ -24,5 +23,3 @@
     </div>
   </div>
 </footer>
-<!-- Footer -->
-</html>
