--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,25 +16,27 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
   </head>
-  <div id="full-nav-open">
-    <i class="fa fa-chevron-left fa-4x" aria-hidden="true"></i>
-  </div>
-  <div id="full-nav">
-    <div id="full-nav-close">
-      <i class="fa fa-times fa-4x" aria-hidden="true"></i>
+  <header class="site-header">
+    <div id="full-nav-open">
+      <i class="fa fa-chevron-left fa-4x" aria-hidden="true"></i>
     </div>
-    <ul id="full-nav-ul">
-      <li>
-        <a href="#">Projects</a>
-      </li>
-      <li>
-        <a href="#">About Me</a>
-      </li>
-      <li>
-        <a href="#">Resume</a>
-      </li>
-      <li>
-        <a href="#">Bin</a>
-      </li>
-    </ul>
-  </div>
+    <div id="full-nav">
+      <div id="full-nav-close">
+        <i class="fa fa-times fa-4x" aria-hidden="true"></i>
+      </div>
+      <ul id="full-nav-ul">
+        <li>
+          <a href="#">Projects</a>
+        </li>
+        <li>
+          <a href="#">About Me</a>
+        </li>
+        <li>
+          <a href="#">Resume</a>
+        </li>
+        <li>
+          <a href="#">Bin</a>
+        </li>
+      </ul>
+    </div>
+  </header>
