--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -5,4 +5,4 @@ layout: default
 ---
 
 <h1>{{ page.project_name }}</h1>
-<h4>{{ page.description }}</h4>
+<span class="project-desc">{{ page.description }}</span>
