adding 400 weight font for content

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,3 +6,7 @@ layout: default
 
 <h1>{{ page.project_name }}</h1>
 <span class="project-desc">{{ page.description }}</span>
+<hr />
+<p>
+  {{ page.content }}
+</p>
