--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,10 +3,14 @@
 layout: default
 
 ---
+<div class="row project-header">
+  <div class="col-12">
+    <h1>{{ page.project_name }}</h1>
+    <span class="project-desc">{{ page.description }}</span>
+  </div>
+</div>
 
-<h1>{{ page.project_name }}</h1>
-<span class="project-desc">{{ page.description }}</span>
-<hr />
-<p>
-  {{ page.content }}
-</p>
+<div class="row">
+  <div class="col-10">
+      {{ content }}
+  </div>
