--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -51,12 +51,12 @@ body a:hover, #site-footer a:hover {
 
 main.page-content {
   flex: 1 0 auto;
-  padding: 28px;
+  padding-top: 28px;
 }
 
 .project-desc {
   color: #cecece;
-  font-weight: 100;
+  opacity: .5;
 }
 
 /* NAV */
@@ -108,6 +108,11 @@ main.page-content {
   padding: 30px;
   color: #e5e5e5;
   cursor: pointer;
+}
+
+/* project */
+.project-header {
+  padding-bottom: 28px;
 }
 
 /* FOOTER */
