--- a/_includes/album.html
+++ b/_includes/album.html
@@ -1,6 +1,13 @@
 <div class="album">
-  <h1>{{ forloop.index }}</h1>
-  <h2>{{ block.album-artist }}</h2>
-  <h4>{{ block.album-title  }}</h4>
-  {{ block.album-description | markdownify }}
+  <div class="cover">
+    <img src="{{ block.cover-art }}" alt="{{ block.album-title }} cover art" />
+  </div>
+  <div class="album-info">
+    <h1>{{ forloop.index }}</h1>
+    <h2>{{ block.album-artist }}</h2>
+    <h4>{{ block.album-title  }}</h4>
+  </div>
+  <div class="album-description">
+    {{ block.album-description | markdownify }}
+  </div>
 </div>
