--- a/_includes/album.html
+++ b/_includes/album.html
@@ -3,9 +3,9 @@
     <img src="{{ block.cover-art }}" alt="{{ block.album-title }} cover art" />
   </div>
   <div class="album-info">
-    <h1>{{ forloop.index }}</h1>
-    <h2>{{ block.album-artist }}</h2>
-    <h4>{{ block.album-title  }}</h4>
+    <h2>{{ forloop.length | plus: 1 | minus: forloop.index }}</h1>
+    <h3>{{ block.album-artist }}</h2>
+    <h5>{{ block.album-title  }}</h4>
   </div>
   <div class="album-description">
     {{ block.album-description | markdownify }}
