--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -127,6 +127,8 @@ main.page-content {
 .album iframe {
   width: 100%;
   height: 480px;
+  border-radius: 4px;
+  box-shadow: 0 0 30px -20px #dd2020;
 }
 .cover {
   background: black;
