--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -116,10 +116,10 @@ main.page-content {
 }
 
 /* AOTY/Album */
-.album {
+.album, .aoty-honorable-mentions {
   position: relative;
-  margin: 1rem;
-  padding-bottom: 2rem;
+  margin: 2rem 1rem 4rem 1rem;
+  padding-bottom: 4rem;
   overflow: hidden;
   border-radius: 4px;
 }
@@ -145,7 +145,7 @@ main.page-content {
   object-fit: cover;
   opacity: .1;
 }
-.album-info {
+.album-info, .aoty-honorable-mentions-list {
   padding: 2rem;
 }
 .album-description {
