--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
   <header class="site-header">
     <div class="home-link">
       {% if page.path != "index.md" %}
-        <a href="/">&laquo; Marc Mestre</a>
+        <a href="/">&laquo; Home</a>
       {% endif %}
     </div>
     <div id="full-nav-open">
@@ -31,16 +31,10 @@
       </div>
       <ul id="full-nav-ul">
         <li>
-          <a href="#">Projects</a>
+          <a href="/">Home</a>
         </li>
         <li>
-          <a href="#">About Me</a>
-        </li>
-        <li>
-          <a href="#">Resume</a>
-        </li>
-        <li>
-          <a href="#">Bin</a>
+          <a href="/AOTY">AOTYs</a>
         </li>
       </ul>
     </div>
