--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,16 +8,10 @@
     <div class="col-6">
       <ul class="list-group list-group-horizontal float-right">
         <li class="list-group-item">
-          <a href="#">Projects</a>
+          <a href="/">Home</a>
         </li>
         <li class="list-group-item">
-          <a href="#">About Me</a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">Resume</a>
-        </li>
-        <li class="list-group-item">
-          <a href="#">Bin</a>
+          <a href="/AOTY">AOTYs</a>
         </li>
       </ul>
     </div>
